cleaned up deciders and implemented generic compensation.