@@ -12,7 +12,7 @@ import java.util.List;
 
 import static blankishproject.Util.undirectedEquals;
 
-public class MinimalDecider implements IDecider {
+public class MinimalDecider extends IDecider {
 
     @Override
     public List<Decision> findMoves(SimplificationData data) {
@@ -21,11 +21,13 @@ public class MinimalDecider implements IDecider {
             System.out.println("Using Rotation");
             return bestRotation;
         }
+
         var bestSpecialPair = findPairMove(data);
         if (bestSpecialPair.size() > 0) {
             System.out.println("Using Complementary Pair");
             return bestSpecialPair;
         }
+
         var bestNormalPair = findNormalPair(data);
         System.out.println("Using Non-complementary Pair");
         return bestNormalPair;
@@ -74,40 +76,24 @@ public class MinimalDecider implements IDecider {
     }
 
     private List<Decision> findPairMove(SimplificationData data) {
-        var bestArea = Double.MAX_VALUE;
-        List<Decision> best = Collections.emptyList();
+        var bestPositive = findSmallest(data.positivePairMoves);
+        var bestNegative = findSmallest(data.negativePairMoves);
+        var smallest = getSmallest(bestPositive, bestNegative);
 
-        for (var move : data.positivePairMoves) {
-            if (move.isValid() && move.getAffectedArea() < bestArea) {
-                best = Collections.singletonList(new Decision(move.configuration, move, move.getAffectedArea(), false));
-                bestArea = move.getAffectedArea();
-            }
-        }
-
-        for (var move : data.negativePairMoves) {
-            if (move.isValid() && move.getAffectedArea() < bestArea) {
-                best = Collections.singletonList(new Decision(move.configuration, move, move.getAffectedArea(), false));
-                bestArea = move.getAffectedArea();
-            }
-        }
-
-        return best;
+        return smallest != null ? Collections.singletonList(new Decision(smallest.configuration, smallest, smallest.getAffectedArea(), false)) : Collections.emptyList();
     }
 
     private List<Decision> findRotation(SimplificationData data) {
-        var moves = data.middleRotationMoves;
-        RotationMove min = null;
-        double minArea = Double.MAX_VALUE;
-        for (var move : moves) {
-            if (move.isValid()) {
-                var area = move.getAffectedArea();
-                if (area < minArea) {
-                    min = move;
-                    minArea = area;
-                }
-            }
-        }
-        return min != null ? Collections.singletonList(new Decision(min.configuration, min)) : Collections.emptyList();
+        var min = findSmallest(data.middleRotationMoves);
+
+        if (min == null)
+            return Collections.emptyList();
+
+        if (!data.compensateSingleMoves)
+            return Collections.singletonList(new Decision(min.configuration, min));
+
+        var compensation = findCompensator(data, min, min.configuration.index);
+        return List.of(new Decision(min.configuration, min), compensation);
     }
 
     private boolean doCollide(Configuration positive, Configuration negative) {
