@@ -6,22 +6,19 @@ import blankishproject.simplification.moves.rotation.RotationMove;
 import java.util.Collections;
 import java.util.List;
 
-public class OnlyMiddleRotationDecider implements IDecider {
+public class OnlyMiddleRotationDecider extends IDecider {
 
     @Override
     public List<Decision> findMoves(SimplificationData data) {
-        var moves = data.middleRotationMoves;
-        RotationMove min = null;
-        double minArea = Double.MAX_VALUE;
-        for (var move : moves) {
-            if (move.isValid()) {
-                var area = move.getAffectedArea();
-                if (area < minArea) {
-                    min = move;
-                    minArea = area;
-                }
-            }
-        }
-        return min != null ? Collections.singletonList(new Decision(min.configuration, min)) : Collections.emptyList();
+        RotationMove min = findSmallest(data.middleRotationMoves);
+
+        if (min == null)
+            return Collections.emptyList();
+
+        if (!data.compensateSingleMoves)
+            return Collections.singletonList(new Decision(min.configuration, min));
+
+        var compensation = findCompensator(data, min, min.configuration.index);
+        return List.of(new Decision(min.configuration, min), compensation);
     }
 }
